[package]
name = "bpf-chdir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redbpf = { version = "2.3.0", features = ["load"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = "0.3.9"
tracing = "0.1.31"
futures = "*"
probes = { path = "./probes" }
